--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -7,7 +7,8 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+display: block;
+text-align: center;
 }
 
 
@@ -15,17 +16,31 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Acá va tu código */
 
+#ejercicioDos{
+    display: none;
+}
 
 
 /* Ejercicio 3: */
 
 /* Acá va tu código */
 
+#ejercicioTres{
+    position: relative;
+    top: 100px;
+    left: 200px;
 
+}
 
 /* Ejercicio 4: */
 
 /* Acá va tu código */
+
+#ejercicioCuatro{
+    position: fixed;
+    top: 0;
+    left: 0;
+}
 
 
 
@@ -33,6 +48,25 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Acá va tu código */
 
+#ejercicioCinco{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+    flex-direction: row-reverse;
+}
 
 
-/* Ejercicio 6. */
+
+/* Ejercicio 7. */
+#ejercicioSiete{
+    width: 700px;
+    height: 700px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#elementoTres{
+    align-self: flex-start;
+}
